<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".todoapp.TodoActivity"
        android:background="@color/todo_background_todo_app"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_marginVertical="44dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/todo_title"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_category"
            style="@style/TodoSubtitle"

            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_tasks"
            android:layout_marginTop="32dp"
            style="@style/TodoSubtitle"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:backgroundTint = "@color/todo_accent"
        android:src="@drawable/ic_plus_1"
        app:tint="@color/white"
        app:fabSize="normal"
        android:layout_gravity="end|bottom"
        />
</FrameLayout>